<resources>
    <string name="app_name">Disabler</string>
    <string name="icon">Icon</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="changeTheme">Change Theme</string>
    <string name="darkTheme">Dark</string>
    <string name="lightTheme">Light</string>
    <string name="sysTheme">System</string>
    <string name="exit">Exit</string>
    <string name="themeAct">Theme Activated</string>
    <string name="config">Config</string>
    <string name="AllAppsDisabled">All Apps Disabled</string>
    <string name="remove_app">Remove App</string>
    <string name="disable_app">Disable App</string>
    <string name="disable">Disable</string>
    <string name="enable_app">Enable App</string>
    <string name="AllAppsEnabled">All Apps Enabled</string>
    <string name="launcher">Launcher</string>
    <string name="name">Name</string>
    <string name="disableAll">Disable All Apps</string>
    <string name="enableAllApp">Enable All Apps</string>
    <string name="add_auto_disable">Add App to Auto Disable</string>
    <string name="edit_apps">Edit Apps</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="columns">Columns</string>
    <string name="Height">Height</string>
    <string name="minimum">Minimum</string>
    <string name="half">Half</string>
    <string name="high">High</string>
    <string name="full">Full</string>
    <string name="bottom">Bottom</string>
    <string name="NoMoreTabs">Cannot Create more tabs</string>
    <string name="add">Add</string>
    <string name="tag">Tag</string>
    <string name="AddedToTag">Added to Tag %1$s</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="RemovedToTag">Removed from Tag %1$s</string>
    <string name="WrongName">Wrong Name</string>
    <string name="DuplicatedName">Tag already exists</string>
    <string name="all">All</string>
    <string name="background">Background</string>
    <string name="transparency">Transparency</string>
    <string name="color">Color</string>
    <string name="system_apps">System Apps</string>
    <string name="theme_desc">Set dark or light theme</string>
    <string name="columns_desc">Set the number of columns for the launcher</string>
    <string name="system_apps_desc">Show System Applications to disable or add to launcher</string>
    <string name="labels">Labels</string>
    <string name="labels_desc">Display or hide labels in the launcher</string>
    <string name="height_desc">Set the Launcher Height</string>
    <string name="background_desc">Set the background color and transparency for the launcher</string>
    <string name="enable_app_text_desc">Set the font color for the apps when enabled</string>
    <string name="disable_app_text_desc">Set the font color for the apps when disabled</string>
    <string name="icons">Icons</string>
    <string name="icons_desc">Set The colors for the App Icons (All Apps, Add Tab, Config) </string>
    <string name="item_selected">Item Selected</string>
    <string name="item_selected_desc">Set the background for the tab selected</string>
    <string name="tabs">Tabs</string>
    <string name="tabs_desc">Show Tabs in the launcher</string>
    <string name="root_needed">This application Need Root Access To disable/Enable Applications</string>
    <string name="tags_disabled">Tags Disabled!</string>
    <string name="text_append_tag">%1$s %2$s</string>
    <string name="help_apps1">Disable: Enable or disable application</string>
    <string name="help_apps2">Launcher: Show or hide application in the launcher</string>
    <string name="help_apps3">tap on app Name: Launcher/Disable, add to launcher and set to automatic Enable/Disable with Menu (Enable/Disable All) Buttons</string>
    <string name="don_t_show_again">Don\'t show Again</string>
    <string name="help_launcher1">To View All Applications (When tabs activated)</string>
    <string name="help_launcher2">To Add a new tab (When tabs activated)</string>
    <string name="help_launcher3">Application settings</string>
    <string name="help_launcher4">To modify the applications in launcher, or manually disable</string>
    <string name="help_launcher5">Enable all applications marked to automatically disable/enable</string>
    <string name="help_launcher6">Disable all applications marked to automatically disable/enable</string>
    <string name="labels_helps">Display all helps again</string>
    <string name="reset">Reset</string>
    <string name="help_reset">Helps View visible</string>
    <string name="remove_auto_app">Remove App from Auto Disable</string>
    <string name="all_tabs_desc">Show All tabs button on launcher</string>
    <string name="hide_recent_apps_desc">Don\'t show in the android recent Apps</string>
    <string name="disable_marked_app">Disable checked apps</string>
    <string name="disable_app_in_tag">Disable all apps in Tag</string>
    <string name="enable_app_in_tag">Enable all apps in Tag</string>
    <string name="move_tag_right">Move Right</string>
    <string name="move_tag_left">Move Left</string>
    <string name="gray_icons">Gray Icons</string>
    <string name="gray_icons_desc">Gray Icons for disabled apps</string>
    <string name="icons_size_desc">Set the icons size</string>
    <string name="auto">Auto</string>
    <string name="timeout_desc">Minutes to auto disable apps after screen off</string>
    <string name="apps_disabled">%1$s Applications disabled when Screen off: %2$s</string>
    <string name="no_apps_to_disable">No applications to disable</string>
    <string name="n_apps">%1$s Applications %2$s</string>
</resources>
