<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/changeTheme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/theme_desc" />

            <RadioGroup
                android:id="@+id/themeRGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioButtonTHemeSys"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sysTheme" />

                <RadioButton
                    android:id="@+id/radioButtonThemeDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/darkTheme" />

                <RadioButton
                    android:id="@+id/radioButtonThemeLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lightTheme" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/columns" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/columns_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCols"
                    android:layout_width="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

                <SeekBar
                    android:id="@+id/columnsCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:min="1"
                    android:max="10" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/Height" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/height_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewHeight"
                    android:layout_width="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

                <SeekBar
                    android:id="@+id/launcherHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:min="1"
                    android:max="10" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="?android:attr/listDivider" />

             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_margin="5dp"
                android:text="@string/system_apps" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/system_apps_desc" />

                <Switch
                    android:id="@+id/switchSysApps"
                    android:paddingStart="20dp"
                    android:layout_weight="1"
                    android:paddingEnd="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_margin="5dp"
                android:text="@string/tabs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/tabs_desc" />

                <Switch
                    android:id="@+id/switchTabs"
                    android:paddingStart="20dp"
                    android:layout_weight="1"
                    android:paddingEnd="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

            </LinearLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="20sp"
               android:layout_margin="5dp"
               android:text="@string/labels" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/labels_desc" />

                <Switch
                    android:id="@+id/switchHideLabels"
                    android:paddingStart="20dp"
                    android:layout_weight="1"
                    android:paddingEnd="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

            </LinearLayout>

            <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="20sp"
               android:layout_margin="5dp"
               android:text="@string/helps" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/labels_helps" />

                <Button
                    android:id="@+id/reset_helps_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/background" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                android:layout_margin="5dp"
                    android:text="@string/background_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBgColor"
                    android:layout_width="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="30dp" />
                <TextView
                    android:id="@+id/textAlpha"
                    android:layout_width="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

                <SeekBar
                    android:id="@+id/bgAlpha"
                    android:layout_width="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:min="1"
                    android:max="100"
                    android:layout_weight="4" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/enable_app_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/enable_app_text_desc" />

                <Button
                    android:id="@+id/buttonTextColor"
                    android:layout_width="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="30dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/disable_app_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/disable_app_text_desc" />

                <Button
                    android:id="@+id/buttonDisTextColor"
                    android:layout_width="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="30dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/icons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/icons_desc" />

                <Button
                    android:id="@+id/buttonIconsColor"
                    android:layout_width="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="30dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/item_selected" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/item_selected_desc" />

                <Button
                    android:id="@+id/buttonItemSelectedColor"
                    android:layout_width="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="30dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>