<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_height="wrap_content"
    android:id="@+id/layoutHelp"
    android:orientation="vertical"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Switch
                android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                android:text="@string/help_apps1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Switch
                android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                android:text="@string/help_apps2" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="24sp"
            android:text="@string/help_apps3" />

        <CheckBox
            android:id="@+id/checkBoxHelpApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_show_again" />

    </LinearLayout>
</ScrollView>